# embedded-software

./: .gitignore  CMakeLists.txt
boot/: CMakeLists.txt  bootflash.cpp  bootflash.h  bootinfo.cpp  bootinfo.h  bootlcd.cpp  bootlcd.h  bootuart.cpp  bootuart.h  main.cpp  sleep.cpp  sleep.h
boot/bootaction/flash/: bootaction.cpp
boot/bootaction/uart/: bootaction.cpp
boot/bootaction/usb/: bootaction.cpp
boot/drivers/: CMakeLists.txt
boot/drivers/F103xB/: .mxproject  CMakeLists.txt  F103xB.gpdsc  F103xB.ioc
boot/drivers/F103xB/Core/Src/: main.c
boot/drivers/bsp/F103xB/: CMakeLists.txt  bsp.cpp  bsp.hpp  info.cpp  info.hpp  tick.cpp  tick.hpp  usart.cpp  usart.hpp  usb.cpp  usb.hpp
boot/drivers/bsp/F401xC/: info.cpp  tick.hpp  usb.hpp
boot/drivers/bsp/F401xE/: CMakeLists.txt  bsp.cpp  bsp.hpp  info.cpp  info.hpp  tick.cpp  tick.hpp  usart.cpp  usart.hpp
boot/drivers/csp/F103xB/: .mxproject  CMakeLists.txt  F103xB.gpdsc  F103xB.ioc
boot/drivers/csp/F103xB/Core/Inc/: main.h  (+1 more)
boot/drivers/csp/F401xC/: .mxproject  CMakeLists.txt  F401xC.gpdsc  F401xC.ioc
boot/drivers/csp/F401xE/: .mxproject  CMakeLists.txt  F401xE.gpdsc  F401xE.ioc
boot/lib/: CMakeLists.txt  timer.cpp  timer.h  timer.hpp  uart.cpp  uart.hpp  wake.cpp  wake.hpp
drivers/: CMakeLists.txt
drivers/BSP/: CMakeLists.txt
drivers/BSP/F103xB_METEOSTATION/: CMakeLists.txt  bsp.cpp  bsp.hpp  flash.cpp  gpio.cpp  gpio.hpp  i2c.hpp  iwdg.cpp  tick.cpp  usart.cpp  usart.hpp
drivers/BSP/F401xE_TEST/: CMakeLists.txt  bsp.cpp  bsp.hpp  gpio.cpp  gpio.hpp  os.cpp  os.hpp  tick.cpp  tick.hpp  usart.cpp  usart.hpp  wdt.cpp
drivers/BSP/ST/: bsp_template.cpp  bsp_template.h  bsp_template.hpp
drivers/BSP/bitpp/: bsp.cpp  bsp.h  bspMem.cpp
drivers/BSP/blackpill/: CMakeLists.txt  bsp.cpp  bsp.h
drivers/BSP/bluepill/: CMakeLists.txt  bsp.cpp  bsp.h
drivers/CSP/: CMakeLists.txt  csp.cpp  csp.h  familyconf.h
drivers/F103xB_METEOSTATION/: .mxproject  F103xB_METEOSTATION.gpdsc  F103xB_METEOSTATION.ioc
drivers/F103xB_METEOSTATION/Core/Inc/: main.h  stm32f1xx_it.h
drivers/F103xB_METEOSTATION/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  usart.c
drivers/F401xE_TEST/: .mxproject  CMakeLists.txt  F401xE_TEST.gpdsc  F401xE_TEST.ioc
drivers/F401xE_TEST/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
drivers/F401xE_TEST/Core/Src/: dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
drivers/FatFS/: CMakeLists.txt  diskio.c
drivers/FreeRTOS/: CMakeLists.txt
drivers/FreeRTOS/CMSIS_RTOS/: CMakeLists.txt
drivers/FreeRTOS/Config/: CMakeLists.txt  FreeRTOSConfig.h
drivers/FreeRTOS/Source/: CMakeLists.txt
drivers/FreeRTOS/Source/CMSIS_RTOS/: CMakeLists.txt
drivers/FreeRTOS/Source/portable/: CMakeLists.txt
drivers/FreeRTOS/Source/portable/MemMang/: CMakeLists.txt
drivers/FreeRTOS/portable/: CMakeLists.txt
drivers/FreeRTOS/portable/GCC/: CMakeLists.txt
drivers/FreeRTOS/portable/GCC/ARM_CM3/: CMakeLists.txt
drivers/FreeRTOS/portable/MemMang/: CMakeLists.txt
drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt  stm32f1xx_hal_conf.h
drivers/STM32F1xx_HAL_Driver/Src/: CMakeLists.txt
drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt  stm32f4xx_hal_conf.h
drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
drivers/STM32_USB_Device_Library/: CMakeLists.txt
drivers/STM32_USB_Device_Library/Class/CDC/: CMakeLists.txt
drivers/STM32_USB_Device_Library/Class/CDC/Inc/: CMakeLists.txt
drivers/STM32_USB_Device_Library/Class/CDC/Src/: CMakeLists.txt
drivers/STM32_USB_Device_Library/Config/: CMakeLists.txt  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c
drivers/STM32_USB_Device_Library/Core/: CMakeLists.txt
drivers/STM32_USB_Device_Library/Core/Src/: CMakeLists.txt
drivers/csp/F103xB_METEOSTATION/: .mxproject  F103xB_METEOSTATION.gpdsc
drivers/csp/F103xB_METEOSTATION/Core/Src/: gpio.c  iwdg.c  stm32f1xx_it.c  usart.c
drivers/csp/F401xE_TEST/: CMakeLists.txt  F401xE_TEST.gpdsc  F401xE_TEST.ioc
drivers/csp/F401xE_TEST/Core/Inc/: stm32f4xx_it.h  usart.h
drivers/csp/F401xE_TEST/Core/Src/: gpio.c  iwdg.c  main.c  stm32f4xx_it.c  usart.c
drivers/lib/: CMakeLists.txt  circular_buffer.h  lock.hpp  rotatebuffer.h  singleton.hpp  utils.hpp
drivers/lib/datetime/: CMakeLists.txt
drivers/lib/i2c/: CMakeLists.txt  i2c.hpp
drivers/lib/i2c/datetime/: ds3231.cpp  ds3231.hpp
drivers/lib/i2c/lcd/: lcd.cpp  lcd.hpp
drivers/lib/i2c/sensors/: CMakeLists.txt  bme280.cpp  bme280.hpp
drivers/lib/log/: log.cpp  log.hpp
drivers/lib/os/: CMakeLists.txt  mutex.cpp  mutex.hpp
drivers/lib/os/thread/: thread.cpp  thread.hpp  thread_pool.hpp
drivers/lib/stream/: CMakeLists.txt  actions.cpp  actions.hpp  handler.cpp  stream.cpp  stream.hpp  stringhandler.cpp  stringhandler.hpp
drivers/lib/task/: priority.hpp  scheduler.cpp  scheduler.hpp
drivers/lib/time/: CMakeLists.txt  time.cpp  time.hpp  timer.hpp
drivers/lib/uart/: CMakeLists.txt  uart.hpp
drivers/lib/uart/gprs/: CMakeLists.txt  sim900.cpp  sim900.hpp
drivers/lib/uart/gsm/: CMakeLists.txt  gsm.cpp  gsm.hpp
drivers/lib/uart/log/: log.cpp  log.hpp
drivers/lib/uart/sensors/: CMakeLists.txt  mhz19.cpp  mhz19.hpp
lib/: CMakeLists.txt  ads7844.cpp  ads7844.h  bme280.cpp  bme280.h  button.h  cyclicbuffer.h  fatfsclass.cpp  fatfsclass.h  flash.cpp  flash.h  gpio.c  gpio.cpp  gpio.h  i2c.h  i2cds18b20.cpp  i2cds18b20.h  i2cds18b20async.cpp  i2cds18b20async.h  i2conewirebase.cpp  i2conewirebase.h  lcd.cpp  lcd.h  lock.h  mhz19.cpp  mhz19.h  mutex.cpp  mutex.h  os.cpp  os.h  rcc.c  rcc.cpp  rcc.h  relay.h  rotatebuffer.h  sdcard.cpp  sdcard.h  sdio.cpp  singleton.h  spi.cpp  (+21 more)
lib/rtc/: CMakeLists.txt  datetime.cpp  datetime.h  ds3231.h  timespan.cpp
lib/rtc/builtin/: datetimemanager.cpp  datetimemanager.h
lib/rtc/i2c/: CMakeLists.txt  ds3231.cpp
lib/usb/: CMakeLists.txt
lib/usb/vcp/: CMakeLists.txt
logic/main/: CMakeLists.txt  app.c  app.cpp  app.h  interrupts.cpp  logic.cpp
logic/main/config/: FreeRTOSConfig.h
logic/main/threads/: CMakeLists.txt  blinkthread.cpp  commandthread.cpp  commandthread.h  mainthread.cpp  mainthread.h
(+207 files in other folders)
